deployment/Kubernetes/overlays/general/production/prototype/prototype-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prototype
spec:
  template:
    spec:
      containers:
        - name: ampersand-prototype
