deployment/Kubernetes/overlays/general/production/prototype/prototype-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prototype-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
